final dia 2 proyecto 1

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 #start-btn {
-  background-color: rgb(94, 41, 6);
+  background-image: url("./Images/poop-emoji.webp");
   color: white;
   padding: 20px;
   font-size: 20px;
