--- a/style.css
+++ b/style.css
@@ -1,20 +1,38 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Handjet:wght@100..900&display=swap');
+
 body {
   margin: 0;
+  font-family: "Dosis", sans-serif;
+  font-size: 30px;
   
 }
 
-.splash-screen {
-  background-image: url("./Images/fonsinici.png")
+#splash-screen {
+  background-image: url("./Images/fons-inici.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  
+}
+
+#splash-screen .container{
+  display: flex;
+  flex-direction: column;
 }
 
 #start-btn {
-  background-image: url("./Images/poop-emoji.webp");
-  color: white;
-  padding: 20px;
-  font-size: 20px;
-  margin-top: 40px;
-  border-radius: 10px; 
+  width: 100px;
+  height: 100px;
+  background-image: url("./Images/poop-emoji.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  border: none;
+  padding: 0;
+  outline: none;   
 }
+
 
 #instructions {
   background-color: rgb(36, 87, 36);
