--- a/style.css
+++ b/style.css
@@ -1,42 +1,89 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Protest+Guerrilla&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Handjet:wght@100..900&display=swap');
+
 
 body {
   margin: 0;
   font-family: "Dosis", sans-serif;
   font-size: 30px;
-  
+}
+
+h1 {
+  color: rgb(0, 134, 175);
+  font-family: "Protest Guerrilla", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 150px;
+  text-shadow: 10px 2px 10px #175884;
+  text-align: center;
+  padding: 0px;
+  margin: 10px;
 }
 
 #splash-screen {
-  background-image: url("./Images/fons-inici.png");
-  background-size: cover;
+  background-image: url("./Images/BG.png");
   background-repeat: no-repeat;
+  background-size: cover;
   background-position: center;
-  
+  height: 100vh;
 }
 
-#splash-screen .container{
+#start {
+  padding: 0px;
   display: flex;
+  justify-content: center;
   flex-direction: column;
+  align-items: center;
 }
 
 #start-btn {
-  width: 100px;
-  height: 100px;
-  background-image: url("./Images/poop-emoji.png");
-  background-size: cover;
-  background-repeat: no-repeat;
+  width: 150px;
+  height: 150px;
+  background-image: url("./Images/egg.png");
+  background-color: transparent;
+  background-size: contain;
   background-position: center;
+  background-repeat: no-repeat;
   border: none;
-  padding: 0;
-  outline: none;   
+  outline: none;
+  text-align: center;
+  font-size: 30px;
+  font-family: "Dosis", sans-serif;
+  font-weight: 700;
 }
 
+#splash-screen {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+#columns{
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+#columns > div {
+  flex: 1; /* Els divs es faran iguals i ocuparan l'espai disponible */
+  min-width: 500px; /* Amplada mínima */
+}
 
 #instructions {
-  background-color: rgb(36, 87, 36);
-  margin: 10px
+  display: flex;
+  flex-direction: row;
+  background-color: rgb(165, 191, 194);
+  border: 4px dashed rgba(202,230,255,0.82);
+  width: 200px;
+}
+
+#instructions .controls{
+  height: 150px;
+  width: 150px;
 }
 
 #instructions h4{
@@ -44,18 +91,21 @@ body {
   justify-content: center;
 }
 
-.container {
+#columnas {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
   margin: 50px;
+  gap: 20px;
 }
 
 #game-box {
   background-color: grey;
   width: 1000px;
   height:800px;
+  border: 30px;
+  border: 7px ridge rgba(28,113,168,0.82);
 
   position: relative; /* permite posicionar los elementos de forma absoluta dentro del game-box */
   overflow: hidden; /* previene que los elementos salgan visualmente del game-box */
@@ -69,6 +119,11 @@ body {
 
 #game-box * {
   pointer-events: none; /* previene que todos los elementos del game-box sean arrastrados al clickar sobre ellos */
+}
+
+.roasted-chiken{
+  width: 100px;
+  height: 100px;
 }
 
 #game-screen, #game-over-screen { /*seleccionar pantallas juego y final para ocultarlas*/
