--- a/style.css
+++ b/style.css
@@ -6,19 +6,7 @@
 body {
   margin: 0;
   font-family: "Dosis", sans-serif;
-  font-size: 30px;
-}
-
-h1 {
-  color: rgb(0, 134, 175);
-  font-family: "Protest Guerrilla", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 150px;
-  text-shadow: 10px 2px 10px #175884;
-  text-align: center;
-  padding: 0px;
-  margin: 10px;
+  font-size: 25px;
 }
 
 #splash-screen {
@@ -27,8 +15,13 @@ h1 {
   background-size: cover;
   background-position: center;
   height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
+/*seccion titulo y boton*/
 #start {
   padding: 0px;
   display: flex;
@@ -37,9 +30,21 @@ h1 {
   align-items: center;
 }
 
+h1 {
+  color: rgb(0, 134, 175);
+  font-family: "Protest Guerrilla", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 125px;
+  text-shadow: 10px 2px 10px #175884;
+  text-align: center;
+  padding: 0px;
+  margin: 10px;
+}
+
 #start-btn {
-  width: 150px;
-  height: 150px;
+  width: 125px;
+  height: 125px;
   background-image: url("./Images/egg.png");
   background-color: transparent;
   background-size: contain;
@@ -53,17 +58,16 @@ h1 {
   font-weight: 700;
 }
 
-#splash-screen {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
+.container{
+  background-color: rgb(165, 191, 194);
+  border: 4px dashed rgba(202,230,255,0.82);
+  padding: 5px;
 }
 
 #columns{
   display: flex;
   flex-direction: row;
-  gap: 20px;
+  gap: 10px;
   justify-content: space-evenly;
   align-items: center;
 }
@@ -74,21 +78,31 @@ h1 {
 }
 
 #instructions {
-  display: flex;
-  flex-direction: row;
-  background-color: rgb(165, 191, 194);
-  border: 4px dashed rgba(202,230,255,0.82);
-  width: 200px;
+  width: 800px;
+  padding: 0px;
+  margin: 15px;
 }
 
 #instructions .controls{
+  display: flex;
+  flex-direction: row;
   height: 150px;
   width: 150px;
+  justify-content: center;
+  align-items: center;
+  padding-left: 50px;
+}
+
+#information{
+  display: flex;
+  flex-direction: row;
+  gap: 50px;
 }
 
 #instructions h4{
   display: flex;
   justify-content: center;
+  padding: 0px;
 }
 
 #columnas {
@@ -100,12 +114,31 @@ h1 {
   gap: 20px;
 }
 
+#name {
+  width: 300px;
+  height: 40px;
+  font-size: 25px;
+}
+
+#game-screen{
+  background-image: url("./Images/BG.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 #game-box {
   background-color: grey;
   width: 1000px;
   height:800px;
   border: 30px;
   border: 7px ridge rgba(28,113,168,0.82);
+
 
   position: relative; /* permite posicionar los elementos de forma absoluta dentro del game-box */
   overflow: hidden; /* previene que los elementos salgan visualmente del game-box */
@@ -119,11 +152,67 @@ h1 {
 
 #game-box * {
   pointer-events: none; /* previene que todos los elementos del game-box sean arrastrados al clickar sobre ellos */
+
 }
 
-.roasted-chiken{
-  width: 100px;
-  height: 100px;
+#game-over-screen{
+  background-image: url("./Images/BG.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0px;
+}
+
+#end {
+  padding: 0px;
+  margin: 0px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+#roasted-chicken{
+  width: 500px;
+  height: 400px;
+}
+
+#restart-btn {
+  width: 150px;
+  height: 150px;
+  background-image: url("./Images/Paloma.png");
+  background-color: transparent;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  border: none;
+  outline: none;
+  text-align: center;
+  font-size: 25px;
+  font-family: "Dosis", sans-serif;
+  font-weight: 700;
+  color: white;
+  text-shadow: 10px 2px 10px #175884;
+}
+
+#menu-btn {
+  width: 150px;
+  height: 150px;
+  background-image: url("./Images/egg.png");
+  background-color: transparent;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  border: none;
+  outline: none;
+  text-align: center;
+  font-size: 30px;
+  font-family: "Dosis", sans-serif;
+  font-weight: 700;
 }
 
 #game-screen, #game-over-screen { /*seleccionar pantallas juego y final para ocultarlas*/
