--- a/style.css
+++ b/style.css
@@ -73,8 +73,8 @@ h1 {
 }
 
 #columns > div {
-  flex: 1; /* Els divs es faran iguals i ocuparan l'espai disponible */
-  min-width: 500px; /* Amplada mínima */
+  flex: 1;
+  min-width: 500px; 
 }
 
 #instructions {
@@ -132,25 +132,24 @@ h1 {
   align-items: center;
 }
 
-#mute {
-  background-image: url("./Images/mute.png");
-  background-color: transparent;
-  background-size: contain;
-  background-position: center;
-  background-repeat: no-repeat;
-  border: none;
-  outline: none;
-  text-align: center;
-  height: 20px;
-  width: 20px;
-}
-
 #options{
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   gap: 20px;
+}
+
+#scoreDisplay{
+  color: rgb(0, 134, 175);
+  font-family: "Protest Guerrilla", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 25px;
+  text-shadow: 10px 2px 10px #175884;
+  text-align: center;
+  padding: 0px;
+  margin: 10px;
 }
 
 #game-box {
@@ -161,9 +160,9 @@ h1 {
   border: 7px ridge rgba(28,113,168,0.82);
 
 
-  position: relative; /* permite posicionar los elementos de forma absoluta dentro del game-box */
-  overflow: hidden; /* previene que los elementos salgan visualmente del game-box */
-  user-select: none; /* previene que los elementos del game-box sean resaltados al hacer click */
+  position: relative; 
+  overflow: hidden; 
+  user-select: none;
 
   background-image: url("./Images/Background.png");
   background-position: center;
@@ -172,7 +171,31 @@ h1 {
 }
 
 #game-box * {
-  pointer-events: none; /* previene que todos los elementos del game-box sean arrastrados al clickar sobre ellos */
+  pointer-events: none; 
+}
+
+.music {
+  background-color: var(--secundary-600);
+  width: 200px;
+  height: 48px;
+  border: none;
+  padding: 0;
+  color: var(--primary-600);
+  border-radius: 5px;
+  box-shadow: -4px 4px var(--primary-shadow);
+  margin: 4px;
+  font-family: var(--heading-font);
+  font-size: 24px;
+
+  border: 4px, solid, var(--secundary-700);
+}
+
+.music:hover {
+  cursor: pointer;
+  background-color: var(--secundary-500);
+  color: var(--neutral-white);
+  border-radius: 5px;
+  transition: 0.5s;
 
 }
 
@@ -236,6 +259,6 @@ h1 {
   font-weight: 700;
 }
 
-#game-screen, #game-over-screen { /*seleccionar pantallas juego y final para ocultarlas*/
+#game-screen, #game-over-screen {
   display: none;
 }
